src/objects/Additional_Party__c.object
<CustomObject>
    <description>Related list of Additional Parties for Agreements</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.Party_Type__c</field>
                <operation>equals</operation>
                <value>LinkedIn</value>
            </filterItems>
            <filterItems>
                <field>Account.Is_LinkedIn_Entity__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Party_Type__c</field>
                <operation>notEqual</operation>
                <value>LinkedIn</value>
            </filterItems>
            <filterItems>
                <field>Account.Is_LinkedIn_Entity__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Parties</relationshipLabel>
        <relationshipName>Additional_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <inlineHelpText>Originating Agreement. Do not modify.</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Additional Parties</relationshipLabel>
        <relationshipName>Additional_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Autofill_Party_Info__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check to copy over party information</inlineHelpText>
        <label>Autofill Party Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_Notice__c</fullName>
        <label>City (Notice)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Notice__c</fullName>
        <label>Country (Notice)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Name__c</fullName>
        <label>Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Type__c</fullName>
        <label>Party Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Signing Party</fullName>
                </value>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>Tenant</fullName>
                </value>
                <value>
                    <fullName>Sub lessor</fullName>
                </value>
                <value>
                    <fullName>Sub lessee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Code_Notice__c</fullName>
        <label>Postal Code (Notice)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province_Notice__c</fullName>
        <label>State/Province (Notice)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_1_Notice__c</fullName>
        <label>Street Address 1 (Notice)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2_Notice__c</fullName>
        <label>Street Address 2 (Notice)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Additional Party</label>
    <nameField>
        <displayFormat>AP-{00000000}</displayFormat>
        <label>Additional Party Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Addl_Party_Name_or_Account_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
LEN(Account__c) = 0,
LEN(Party_Name__c)=0
)</errorConditionFormula>
        <errorMessage>An Account or Party Name is required for save.</errorMessage>
    </validationRules>
</CustomObject>